--- a/public/signUp.html
+++ b/public/signUp.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -16,31 +17,21 @@
   <link href='./images/favicon.ico' rel='icon' type='image/x-icon'/>
   
   <script src="js/jquery.min.js"></script>
+  <script src="js/fremilyAjax.js"></script>
   <script src="js/responsiveslides.js"></script>
   <script src="js/fremilyLogin.js"></script>
   <script src="js/signUpPersonalDetails.js"></script>
   <script src="js/googleGeocodeFremily.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places&language=en"></script>
 </head>
 <body>
 
   <header>
     <div class="zerogrid">
       <div class="row">
-        <div class="col05">
+        <div class="col05 offset05">
           <div id="logo"><a href=""><img src="./images/logo2.png"/></a></div>
         </div>
-        <div class="col06 offset05">
-          <div class="loginFields">
-            Email: <input type="email" size ="20" name="email" class="inputText" id="emailInserted"><br>
-            Password: <input type="password" size = "16" name="pswd" class="inputText" id="pswdInserted"><a href="">   Forgot?</a><br>
-            <br>
-            <ul>
-              <li><button id="submitButton" onclick="loginButtonClicked()">Log In</button>
-                <button id="signupButton" onclick="signupButtonClicked()">Sign Up</button>
-              </ul>
-            </div>
-          </div>
         </div>
       </div>
     </header>
@@ -52,8 +43,8 @@
     <section id="content">
       <div class="zerogrid">
         <div class="row block offbottom">
-          <div class="main-content col11">
-            <br><h1 class="titles">Sign Up </h1><br><br>
+          <div class="main-content offset02">
+            <br><h1 id="signUp" class="titles">Sign Up </h1><br><br>
               <h2 class="secondtitles" id="signUpTitle">Who Are The Fremily Parents?</h2><br><br>
               <table id="familyTypeTable">
                 <tr>
@@ -63,49 +54,52 @@
                   <td><img onmouseover="momMouseOver()" onmouseout="momMouseOut()" onclick="momMouseClick()" title="Mother" id = "momPic" src="images/momBW.jpg"/></td>
                   <td><img onmouseover="dadMouseOver()" onmouseout="dadMouseOut()" onclick="dadMouseClick()" title="Father" id = "dadPic" src="images/dadBW.JPG"/></td>
                 </tr>
-              </table>              
+              </table>  
+          </div>
+            <div class="main-content offset00">
             <table class="loginFields" id="signUpTable">
                 <tr>
-                <td id="familyname">Family Name: <input id="familynameInput" type="text" size ="25" class="inputText" style="border:1px solid #000000"></td>
+                <td id="familyname">Family Name: <input type="text" size ="25" class="inputText" style="border:1px solid #000000"></td>
               </tr>
               <tr></tr>
               <tr>
-                <td id="parent1name">Parent1 name: <input id="parent1nameInput" type="text" size ="20"  class="inputText" style="border:1px solid #000000"></td>
-                <td id="parent1dob">Parent1 DOB <input id="parent1dobInput" type="date" id="parentonedob"  class="inputText" style="border:1px solid #000000"></td>
+                <td id="parent1name">Parent1 name: <input type="text" size ="20"  class="inputText" style="border:1px solid #000000"></td>
+                <td id="parent1dob">Parent1 DOB <input type="date" id="parentonedob"  class="inputText" style="border:1px solid #000000"></td>
               </tr>
               <tr>
-                  <td id="parent2name">Parent2 name: <input id="parent2name" type="text" size ="20"  class="inputText" style="border:1px solid #000000"></td>
-                  <td id="parent2dob">Parent2 DOB: <input id="parent2dobInput" type="date" class="inputText" style="border:1px solid #000000"></td>
+                  <td id="parent2name">Parent2 name: <input type="text" size ="20"  class="inputText" style="border:1px solid #000000"></td>
+                  <td id="parent2dob">Parent2 DOB: <input type="date"   class="inputText" style="border:1px solid #000000"></td>
               </tr>
               <tr>
-                  <td id="emailAddress">Email Address: <input id="emailAddressInput" type="email" size ="20" name="" class="inputText" style="border:1px solid #000000"></td>
-                  <td id="pswd">Password: <input id="pswdInput" type="password" size ="20" name="" class="inputText" style="border:1px solid #000000"></td>
-                  <td id="pswd2">Re-type Password: <input id="pswd2Input" type="password" size ="20" name="" class="inputText" style="border:1px solid #000000"></td>
+                  <td id="emailAddress">Email Address: <input type="email" size ="20" name="" class="inputText" style="border:1px solid #000000"></td>
+                  <td id="pswd">Password: <input type="password" size ="20" name="" class="inputText" style="border:1px solid #000000"></td>
+                  <td id="pswd2">Re-type Password: <input type="password" size ="20" name="" class="inputText" style="border:1px solid #000000"></td>
               </tr>
               <tr>
-                  <td id="address">Address:<input id="addressInput" type="text" size ="20"  class="inputText" style="border:1px solid #000000"></td>
-                  <td id="numofchildren">Number Of Children: <input id="numofchildrenInput" type="number" min="1" max="20" step="1" value="1" name="" class="inputText" style="border:1px solid #000000"></td>
-                  <td id="familyphoto">Family Photo:<input id="familyphotoInput" type="file" accept="image/*" name="fileToUpload"></td>
+                  <td id="address">Address:<input type="text" size ="20"  class="inputText" style="border:1px solid #000000"></td>
+                  <td id="numofchildren">Number Of Children: <input type="number" min="1" max="20" step="1" value="1" name="" class="inputText" style="border:1px solid #000000"></td>
+                  <td id="familyphoto">Family Photo:<input id="profilePicture" type="file" accept="image/*" name="fileToUpload"></td>
+              </tr>
+              <tr>
+                  <td>
+                      <h2 style="visibility: hidden" id="errorlocation" class="secondtitles">Full Adrress Is Mandatory!</h2>
+                  </td>
               </tr>
             </table>              
             <table class="loginFields" id="childreninfo"></table>          
-            <h1 id="welcome"></h1>
-            <h2 style="visibility: hidden; color:red" id="errorFremilyNotSelected" class="secondtitles">Fremily Parents Not Selected Yet!</h2>
-            <br><button style="visibility: hidden" id="previousButton" onclick="signUpPrevious()">< Previous</button>
-            <button id="nextButton" onclick="signUpNext()">Next ></button><br><br>
-          </div>
-          <div class="sidebar col05">
-              <section class="block1">
-                  <div class="heading">About Fremily</div>
-                  <div class="content">
-                      Fremily is a free social network based on user-manages-content principal. Events for children, people and organizations supply services for families are advertised and recommended by other families that had experience with them.</div>
-              </section>
-          </div>
+            </div>
+            <div class="main-content offset02">
+                <h1 id="welcome"></h1>
+                <h2 style="visibility: hidden; color:red" id="errorFremilyNotSelected" class="secondtitles">Fremily Parents Not Selected Yet!</h2>
+                <br><button style="visibility: hidden" id="previousButton" onclick="signUpPrevious()">< Previous</button>
+                <button id="nextButton" onclick="signUpNext()">Next ></button><br><br>
+            </div>
+
         </div>
       </div>
-      </section>
+    </section>
 
-      <footer>
+    <footer>
         <div class="zerogrid">
           <div class="row block2">
             <section class="col-1-3">
@@ -124,24 +118,29 @@
                     <td><img src="images/thumb5.jpg"/></td>
                   </tr>
                   <tr>
-                    <td><img src="images/thumb6.jpg"/></td>
-                    <td><img src="images/thumb5.jpg"/></td>
-                    <td><img src="images/thumb6.jpg"/></td>
+                      <td><img src="images/thumb6.jpg"/></td>
+                      <td><img src="images/thumb5.jpg"/></td>
+                      <td><img src="images/thumb6.jpg"/></td>
                   </tr>
                 </table>
               </div>
+            </section>
+            <section class="col-1-3">
+                <div class="heading">Have Fun!</div>
+                <div class="content">
+                    <table border="0px">
+                        <tr>
+                            <td><img src="images/sunset.jpg" width="190"/></td>
+                        </tr>
+                    </table>
+                </div>
             </section>
           </div>
         </div>
       </footer>
       <div id="copyright">
-        <p>Copyright © 2015 - Fremily Group</p>
-        <p><a href="https://www.mta.ac.il/Pages/default.aspx" target="_blank">Academic College Of Tel-Aviv Yaffo</a></p>
+          <p>Copyright © 2015 - Fremily Group</p>
+          <p><a href="https://www.mta.ac.il/Pages/default.aspx" target="_blank">Academic College Of Tel-Aviv Yaffo</a></p>
       </div>
-    </body>
-      <script type="text/javascript">
-        $(document).ready(function (){
-          typeOfFamily = 0;
-        });
-      </script>
-    </html>
+</body>
+</html>
